[package]
name = "mubbylend"
version = "0.1.0"
description = "Private lending and borrowing on Solana × Arcium"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mubbylend"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
